...

        </LinearLayout>



            <Button
                android:id="@+id/bShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:width="120dp"
                android:height="60dp"
...
