...
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:id="@+id/bEditWord"
            android:onClick="EditWordButtonOnClick"
            />
    </RelativeLayout>

</LinearLayout>

