...

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/etCategory"
            />



    </LinearLayout>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"

            android:id="@+id/bAddCategory"
            android:onClick="AddCategoryButtonOnClick"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
...
